adjustment on Service AwardService and Integrated Tests